--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -18,15 +18,22 @@ on:
       - 'rector.php'
       - '.github/workflows/rector.yml'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
 jobs:
   build:
     name: PHP ${{ matrix.php-versions }} Rector Analysis
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
+    if: (! contains(github.event.head_commit.message, '[ci skip]'))
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['8.1', '8.2']
+        php-versions: ['8.1', '8.3']
 
     steps:
       - name: Checkout
@@ -61,6 +68,4 @@ jobs:
           fi
 
       - name: Analyze for refactoring
-        run: |
-          composer global require --dev rector/rector:^0.19.5
-          rector process --dry-run --no-progress-bar
+        run: vendor/bin/rector process --dry-run --no-progress-bar
