update sqlsrv extension in the workflow

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -146,7 +146,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           tools: composer, phive, phpunit
-          extensions: intl, json, mbstring, gd, xdebug, xml, sqlite3, sqlsrv, oci8, pgsql
+          extensions: intl, json, mbstring, gd, xdebug, xml, sqlite3, sqlsrv-5.10.1, oci8, pgsql
           coverage: xdebug
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
